grafana/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/provisioning/datasources/datasources.yml
              subPath: datasources.yml
            - mountPath: /var/lib/grafana
              name: data
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 0m
              memory: 0Mi
      volumes:
        - name: config
          configMap:
            name: grafana
        - name: data
          persistentVolumeClaim:
            claimName: grafana
