grafana/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: web
      port: 80
      targetPort: web
  type: ClusterIP
