grafana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: star
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-grafana.iam.svc.cluster.local:4180/oauth2/grafana/auth
    nginx.ingress.kubernetes.io/auth-signin: https://grafana.login.outi.ir/oauth2/grafana/start?rd=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,Authorization
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.outi.ir
      secretName: grafana-tls
  rules:
    - host: grafana.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: web
